--- a/Server/package.json
+++ b/Server/package.json
@@ -3,6 +3,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase": "^10.10.0",
-    "nodemon": "^3.1.0"
+    "nanoid": "^5.0.7",
+    "nodemon": "^3.1.0",
+    "uuid": "^9.0.1"
   }
 }
