--- a/Server/package.json
+++ b/Server/package.json
@@ -1,11 +1,12 @@
 {
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "firebase": "^10.10.0",
-    "jsonwebtoken": "^9.0.2",
-    "nanoid": "^5.0.7",
-    "nodemon": "^3.1.0",
-    "uuid": "^9.0.1"
-  }
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "express": "^4.19.2",
+        "firebase": "^10.10.0",
+        "jsonwebtoken": "^9.0.2",
+        "nanoid": "^5.0.7",
+        "nodemon": "^3.1.0",
+        "uuid": "^9.0.1"
+    }
 }
