--- a/Client/package.json
+++ b/Client/package.json
@@ -17,7 +17,9 @@
         "axios": "^1.6.8",
         "firebase": "^10.10.0",
         "framer-motion": "^11.0.25",
+        "jwt-decode": "^4.0.0",
         "preline": "^2.1.0",
+        "pusher-js": "^8.4.0-rc2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-loader-spinner": "^6.1.6",
