--- a/Server/package.json
+++ b/Server/package.json
@@ -4,9 +4,11 @@
         "cors": "^2.8.5",
         "express": "^4.19.2",
         "firebase": "^10.10.0",
+        "firebase-admin": "^12.3.1",
         "jsonwebtoken": "^9.0.2",
         "nanoid": "^5.0.7",
         "nodemon": "^3.1.0",
+        "pusher": "^5.2.0",
         "uuid": "^9.0.1"
     }
 }
